--- a/public/assets/variables.scss
+++ b/public/assets/variables.scss
@@ -1,3 +1,4 @@
 $body-font-family: 'Nunito', serif;
 $btn-outline-border-width: 2px;
-$card-hover-elevation: 4;
+$card-hover-elevation: 8;
+$card-elevation: 3;
