refactor: named font families instead of aliases

--- a/api/assets/fonts/pacifico.css
+++ b/api/assets/fonts/pacifico.css
@@ -1,7 +1,7 @@
 
 /* latin */
 @font-face {
-  font-family: {FONT_FAMILY};
+  font-family: Pacifico;
   font-style: normal;
   font-weight: 400;
   font-display: swap;
@@ -11,7 +11,7 @@
 
 /* latin-ext */
 @font-face {
-  font-family: {FONT_FAMILY};
+  font-family: Pacifico;
   font-style: normal;
   font-weight: 400;
   font-display: swap;
