--- a/api/assets/fonts/roboto.css
+++ b/api/assets/fonts/roboto.css
@@ -1,7 +1,7 @@
 
 /* latin */
 @font-face {
-  font-family: {FONT_FAMILY};
+  font-family: Roboto;
   font-style: italic;
   font-weight: 300;
   font-display: swap;
@@ -11,7 +11,7 @@
 
 /* latin */
 @font-face {
-  font-family: {FONT_FAMILY};
+  font-family: Roboto;
   font-style: italic;
   font-weight: 400;
   font-display: swap;
@@ -21,7 +21,7 @@
 
 /* latin */
 @font-face {
-  font-family: {FONT_FAMILY};
+  font-family: Roboto;
   font-style: italic;
   font-weight: 500;
   font-display: swap;
@@ -31,7 +31,7 @@
 
 /* latin */
 @font-face {
-  font-family: {FONT_FAMILY};
+  font-family: Roboto;
   font-style: italic;
   font-weight: 700;
   font-display: swap;
@@ -41,7 +41,7 @@
 
 /* latin */
 @font-face {
-  font-family: {FONT_FAMILY};
+  font-family: Roboto;
   font-style: normal;
   font-weight: 300;
   font-display: swap;
@@ -51,7 +51,7 @@
 
 /* latin */
 @font-face {
-  font-family: {FONT_FAMILY};
+  font-family: Roboto;
   font-style: normal;
   font-weight: 400;
   font-display: swap;
@@ -61,7 +61,7 @@
 
 /* latin */
 @font-face {
-  font-family: {FONT_FAMILY};
+  font-family: Roboto;
   font-style: normal;
   font-weight: 500;
   font-display: swap;
@@ -71,7 +71,7 @@
 
 /* latin */
 @font-face {
-  font-family: {FONT_FAMILY};
+  font-family: Roboto;
   font-style: normal;
   font-weight: 700;
   font-display: swap;
@@ -81,7 +81,7 @@
 
 /* latin-ext */
 @font-face {
-  font-family: {FONT_FAMILY};
+  font-family: Roboto;
   font-style: italic;
   font-weight: 300;
   font-display: swap;
@@ -91,7 +91,7 @@
 
 /* latin-ext */
 @font-face {
-  font-family: {FONT_FAMILY};
+  font-family: Roboto;
   font-style: italic;
   font-weight: 400;
   font-display: swap;
@@ -101,7 +101,7 @@
 
 /* latin-ext */
 @font-face {
-  font-family: {FONT_FAMILY};
+  font-family: Roboto;
   font-style: italic;
   font-weight: 500;
   font-display: swap;
@@ -111,7 +111,7 @@
 
 /* latin-ext */
 @font-face {
-  font-family: {FONT_FAMILY};
+  font-family: Roboto;
   font-style: italic;
   font-weight: 700;
   font-display: swap;
@@ -121,7 +121,7 @@
 
 /* latin-ext */
 @font-face {
-  font-family: {FONT_FAMILY};
+  font-family: Roboto;
   font-style: normal;
   font-weight: 300;
   font-display: swap;
@@ -131,7 +131,7 @@
 
 /* latin-ext */
 @font-face {
-  font-family: {FONT_FAMILY};
+  font-family: Roboto;
   font-style: normal;
   font-weight: 400;
   font-display: swap;
@@ -141,7 +141,7 @@
 
 /* latin-ext */
 @font-face {
-  font-family: {FONT_FAMILY};
+  font-family: Roboto;
   font-style: normal;
   font-weight: 500;
   font-display: swap;
@@ -151,7 +151,7 @@
 
 /* latin-ext */
 @font-face {
-  font-family: {FONT_FAMILY};
+  font-family: Roboto;
   font-style: normal;
   font-weight: 700;
   font-display: swap;
